css: Fix alignment of numbers on home page.

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -10,6 +10,10 @@ h2, h3 {
   margin-top: 50px;
 }
 
+.panel-heading h3 {
+  margin-top: 20px;
+}
+
 p{
   font-family: 'Lato', sans-serif;
 }
